--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1321,6 +1321,7 @@ jobs:
           runtime:
             options:
               env:
+                - NODE_RES: "node_file_pack"
                 - SOURCE_IMAGE_FAMILY: "ubuntu-1604-lts"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
@@ -1333,11 +1334,12 @@ jobs:
                 - OS: "Ubuntu_16.04"
                 - DOCKER_VER: "17.06"
           script:
-            - TAR_FILENAME=$(shipctl get_resource_version_key "node_file_pack" "TAR_FILENAME")
-            - WEB_URL=$(shipctl get_resource_version_key "node_file_pack" "WEB_URL")
-            - export NODE_DOWNLOAD_URL="$WEB_URL/$TAR_FILENAME"
             - export REL_VER_DASH=${REL_VER//./-}
             - export FAM_NAME=$REL_VER_DASH"-prep-u16-x86-64"
+            - |
+               TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
+               WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+               export NODE_DOWNLOAD_URL="$WEB_URL/$TAR_FILENAME"
             - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/prep
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - cp -R ../../../templates/prep/* .
@@ -1359,9 +1361,10 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: u16_x86_64_gcp_img_prep
-      - IN: node_file_pack
+      - IN: u16reqProc_dd_img
+      - IN: u16repLib_x8664_build
+      - IN: reqKick_file_pack
       - IN: cexec_file_pack
-      - IN: u16reqProc_x8664_build
       - IN: buildami_repo
         switch: off
       - IN: ship_bits_gcp
@@ -1371,6 +1374,11 @@ jobs:
           runtime:
             options:
               env:
+                - BASE_IMG_RES: "u16_x86_64_gcp_img_prep"
+                - REQPROC_RES: "u16reqProc_dd_img"
+                - REPORTS_RES: "u16repLib_x8664_build"
+                - REQKICK_RES: "reqKick_file_pack"
+                - CEXEC_RES: "cexec_file_pack"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
                 - ZONE: "us-east1-b"
@@ -1378,14 +1386,36 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - SSH_USER: "root"
           script:
+            - |
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES "IMAGE_FAM_NAME")
+               export NODE_WEB_URL=$(shipctl get_resource_version_key "$BASE_IMG_RES "NODE_WEB_URL")
+               export NODE_TAR_FILENAME=$(shipctl get_resource_version_key "$BASE_IMG_RES "NODE_TAR_FILENAME")
+               export REL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "REL_VER")
+               export REL_VER_DASH=${REL_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-patch-u16-x86-64"
+            - |
+               REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_RES" "sourceName")
+               REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
+               export REQPROC_IMAGE="$REQPROC_REG:$REQPROC_TAG"
+            - |
+               REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
+               REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
+               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REP_TAR_FILENAME"
+            - |
+               KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
+               KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
+               export REQKICK_DOWNLOAD_URL="$KICK_WEB_URL/$KICK_TAR_FILENAME"
+            - |
+               CEXEC_TAR_FILENAME=$(shipctl get_resource_version_key "$CEXEC_RES" "TAR_FILENAME")
+               CEXEC_WEB_URL=$(shipctl get_resource_version_key "$CEXEC_RES" "WEB_URL")
+               export CEXEC_DOWNLOAD_URL="$CEXEC_WEB_URL/$CEXEC_TAR_FILENAME"
             - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/Ubuntu_16.04/patch
             - cp -R ../../../templates/patch/* .
-            - shipctl copy_file_from_resource_state "u16_x86_64_gcp_img_prep" "images.txt" .
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep IMAGE_FAM_NAME)
-            - export REL_VER=$(shipctl get_resource_version_key u16_x86_64_gcp_img_prep REL_VER)
-            - export REL_VER_DASH=${REL_VER//./-}
-            - export FAM_NAME=$REL_VER_DASH"-patch-u16-x86-64"
-            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+            - shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
+            - echo $(shipctl get_integration_resource_field "ship_bits_gcp" "JSON_key") > $SERVICE_ACCOUNT_JSON
             - shipctl replace vars.json
             - packer validate -var-file=vars.json packer.json
             - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
@@ -1393,6 +1423,8 @@ jobs:
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "NODE_WEB_URL=$NODE_WEB_URL" "NODE_TAR_FILENAME=$NODE_TAR_FILENAME"  "REPORTS_WEB_URL=$REP_WEB_URL" "REPORTS_TAR_FILENAME=$REP_TAR_FILENAME"
+        - shipctl put_resource_state_multi $JOB_NAME "REQKICK_WEB_URL=$KICK_WEB_URL" "REQKICK_TAR_FILENAME=$KICK_TAR_FILENAME" "CEXEC_WEB_URL=$CEXEC_WEB_URL" "CEXEC_TAR_FILENAME=$CEXEC_TAR_FILENAME"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
