updating c7_x86_64_gcp_img_prep  job

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -670,20 +670,21 @@ jobs:
     dependencyMode: strict
     steps:
       - IN: trig_gcp_img_prep
-      - IN: buildami_repo
-        switch: off
-      - IN: ship_bits_gcp
-        switch: off
       - IN: c7cppall_dd_img
       - IN: c7javall_dd_img
       - IN: c7pytall_dd_img
       - IN: c7nodall_dd_img
+      - IN: node_file_pack
+      - IN: buildami_repo
+        switch: off
+      - IN: ship_bits_gcp
         switch: off
       - TASK:
           name: prep_c7_gce_image
           runtime:
             options:
               env:
+                - NODE_RES: "node_file_pack"
                 - SOURCE_IMAGE_FAMILY: "centos-7"
                 - MACHINE_TYPE: "n1-standard-8"
                 - REGION: "us-east1"
@@ -692,12 +693,22 @@ jobs:
                 - SERVICE_ACCOUNT_JSON: "gcp_key.json"
                 - REL_VER: "master"
                 - SSH_USER: "centos"
+                - ARCHITECTURE: "x86_64"
+                - OS: "CentOS_7"
+                - DOCKER_VER: "17.06"
           script:
-            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/CentOS_7/prep
-            - cp -R ../../../templates/prep/* .
+            - |
+               export IMG_VER=$REL_VER
+               export REL_VER_DASH=${REL_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-prep-c7-x86-64"
+            - |
+               TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
+               WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+               export NODE_DOWNLOAD_URL="$WEB_URL/$TAR_FILENAME"
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/prep
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
-            - export REL_VER_DASH=${REL_VER//./-}
-            - export FAM_NAME=$REL_VER_DASH"-prep-c7-x86-64"
+            - cp -R ../../../templates/linux/* .
+            - cp -R ../../../templates/prep/* .
             - shipctl replace vars.json
             - packer validate -var-file=vars.json packer.json
             - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
@@ -705,6 +716,7 @@ jobs:
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
