--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1295,7 +1295,7 @@ jobs:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
 
 ######################### GCP U16 Image ##################################
-  - name: u16_x86_64_gcp_img_prep
+  - name: prep_u16_x8664_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -1358,12 +1358,12 @@ jobs:
       script:
         - cat output.txt
 
-  - name: u16_x86_64_gcp_img_patch
+  - name: patch_u16_x8664_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: u16_x86_64_gcp_img_prep
+      - IN: prep_u16_x8664_gce_img
       - IN: u16reqProc_dd_img
       - IN: u16repLib_x8664_build
       - IN: reqKick_file_pack
@@ -1377,7 +1377,7 @@ jobs:
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "u16_x86_64_gcp_img_prep"
+                - BASE_IMG_RES: "prep_u16_x8664_gce_img"
                 - REQPROC_RES: "u16reqProc_dd_img"
                 - REPORTS_RES: "u16repLib_x8664_build"
                 - REQKICK_RES: "reqKick_file_pack"
@@ -1434,7 +1434,7 @@ jobs:
       script:
         - cat output.txt
 
-  - name: u16_x86_64_gcp_img_final
+  - name: final_u16_x8664_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -1454,13 +1454,13 @@ jobs:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
       - IN: reqKick_repo_file_tag
-      - IN: u16reqProc_dd_tag
       - IN: u16repLib_x8664_tag
+      - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
       - IN: buildami_repo
         switch: off
-      - IN: u16_x86_64_gcp_img_patch
+      - IN: patch_u16_x8664_gce_img
         switch: off
       - IN: prod_release
         switch: off
@@ -1471,7 +1471,7 @@ jobs:
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "u16_x86_64_gcp_img_patch"
+                - BASE_IMG_RES: "patch_u16_x8664_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u16reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u16reqProc_dd_img"
@@ -1490,7 +1490,6 @@ jobs:
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
                export FAM_NAME=$REL_VER_DASH"-final-u16-x86-64"
-               export SOURCE_IMAGE_FAMILY=$REL_VER_DASH"-final-u16-x86-64"
             - |
                export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "BASE_IMG_RES" "IMAGE_FAM_NAME")
                export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
@@ -1537,15 +1536,15 @@ jobs:
       script:
         - cat output.txt
 
-  - name: u16_x86_64_gcp_img_v634
+  - name: v634_u16_x8664_gce_img
     type: runSh
     dependencyMode: strict
     triggerMode: parallel
     steps:
       - IN: node_repo_file_tag
       - IN: cexec_repo_file_tag
-      - IN: reqProc_repo_tag
       - IN: u16repLib_x8664_tag
+      - IN: u16reqProc_dd_tag
       - IN: u16reqProc_dd_img
         switch: off
       - IN: buildami_repo
@@ -1554,14 +1553,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: u16_x86_64_gcp_img_final
+      - IN: final_u16_x8664_gce_img
         switch: off
       - TASK:
-          name: v634_u16_gce_image
+          name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "u16_x86_64_gcp_img_patch"
+                - BASE_IMG_RES: "final_u16_x8664_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u16reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u16reqProc_dd_img"
@@ -1580,8 +1579,8 @@ jobs:
                export REL_VER=$(shipctl get_resource_version_name "prod_release")
                export IMG_VER_DASH=${IMG_VER//./-}
                export FAM_NAME=$IMG_VER_DASH"-final-u16-x86-64"
+               export SOURCE_IMAGE_FAMILY=$FAM_NAME
             - |
-               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "BASE_IMG_RES" "IMAGE_FAM_NAME")
                export ARCHITECTURE=$(shipctl get_resource_version_key "BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "BASE_IMG_RES" "DOCKER_VER")
@@ -1626,6 +1625,7 @@ jobs:
       script:
         - cat output.txt
 
+### AWS AMIs
   - name: u16baseami_prep
     type: runSh
     triggerMode: parallel
