--- a/images/x86_64/WindowsServer_2016/shippable.yml
+++ b/images/x86_64/WindowsServer_2016/shippable.yml
@@ -395,13 +395,14 @@ jobs:
       script:
         - cat output.txt
 
-  - name: w2k16_x86_64_gcp_img_patch
+  - name: patch_w2k16_x8664_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
       - IN: prep_w2k16_x8664_gce_img
       - IN: node_file_pack
+      - IN: reqKick_file_pack
       - IN: cexec_file_pack
       - IN: w2k16reqProc_x8664_build
       - IN: ami_reqKick_repo
@@ -459,7 +460,7 @@ jobs:
       - IN: u16repLib_aarch64_tag
       - IN: buildami_repo
         switch: off
-      - IN: w2k16_x86_64_gcp_img_patch
+      - IN: patch_w2k16_x8664_gce_img
         switch: off
       - IN: prod_release
         switch: off
@@ -478,12 +479,12 @@ jobs:
                 - WINRM_USERNAME: "packer_user"
           script:
             - pushd $(shipctl get_resource_state "buildami_repo")/gcp/x86_64/WindowsServer_2016/final
-            - shipctl copy_file_from_resource_state "w2k16_x86_64_gcp_img_patch" "images.txt" .
+            - shipctl copy_file_from_resource_state "patch_w2k16_x8664_gce_img" "images.txt" .
             - export REL_VER=$(shipctl get_resource_version_key "prod_release" versionName)
             - export REL_VER_DASH=${REL_VER//./-}
             - export IMG_VER=$REL_VER
             - export FAM_NAME=$REL_VER_DASH"-final-w2k16-x86-64"
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key w2k16_x86_64_gcp_img_patch IMAGE_FAM_NAME)
+            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key patch_w2k16_x8664_gce_img IMAGE_FAM_NAME)
             - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
             - shipctl replace vars.json
             - packer validate -var-file=vars.json packer.json
